# ds-project-template_template

./: .gitignore  license.txt  makefile  pyproject.toml  readme.md
notebooks/: 0--preliminaries.ipynb  1--data-retrieval.ipynb  2--data-exploration.ipynb  3--modelling.ipynb  4--resume.ipynb
scripts/: grep-todos.sh  report-todos.sh
src/ipynb_utils/: __init__.py  cfg.py  utils.py
