[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# TODO: Update project name
name = "ds-project-template"
# TODO: Update version number
version = "0.1.0"
# TODO: Update description
description = "DS Project Template"
# TODO: Update authors
authors = [
    { name = "The Octocat", email = "octocat@github.com" },
    { name = "Ghost" },
]
readme = "readme.md"
requires-python = ">=3.11"
# TODO: Update license file
license = { file = "license.txt" }
# TODO: Update dependencies (in particular, remove superfluous dependencies)
dependencies = [
    # A python library for easy manipulation and forecasting of time series.
    "darts==0.35.0",
    # IPython Kernel for Jupyter.
    "ipykernel==6.29.5",
    # Jupyter metapackage. Install all the Jupyter components in one go.
    "jupyter==1.1.1",
    # Multi-backend Keras.
    "keras==3.9.2",
    # Python plotting package.
    "matplotlib==3.7.1",
    # Missing data visualization module for Python.
    "missingno==0.5.2",
    # Fundamental package for array computing in Python.
    "numpy==1.26.0",
    # Powerful data structures for data analysis, time series, and statistics.
    "pandas==2.1",
    # An open-source interactive data visualization library for Python.
    "plotly==6.1.0",
    # Read key-value pairs from a .env file and set them as environment variables.
    "python-dotenv==1.1.0",
    # psycopg2 - Python-PostgreSQL Database Adapter.
    "psycopg2-binary==2.9.10",
    # A set of python modules for machine learning and data mining.
    "scikit-learn==1.6.0",
    # Statistical computations and models for Python.
    "statsmodels==0.14.0",
    # Pretty-print tabular data.
    "tabulate==0.9.0",
    # TensorFlow is an open source machine learning framework for everyone.
    "tensorflow==2.19.0",
]
